--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chrome-bus",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Share an event emitter among chrome runtime components",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "standard index.js && browserify test/src/webview.js -o test/chrome-app/webview.js && browserify test/src/index.js -o test/chrome-app/index.js && node test/runner.js"
+    "test": "standard index.js && browserify test/src/webview.js -o test/chrome-app/webview.js && browserify test/src/index.js -o test/chrome-app/index.js && browserify test/src/background.js -o test/chrome-app/background.js && node test/runner.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/No9/chrome-bus",
   "devDependencies": {
-    "browserify": "^11.1.0",
-    "launch-chrome-app": "^1.0.1",
-    "standard": "^5.3.1"
+    "browserify": "11.1.0",
+    "launch-chrome-app": "1.0.1",
+    "standard": "5.3.1",
+    "tape": "4.1.0"
   }
 }
